some color changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <h1 class="text-center pt-5">Welcome to <span class="text-danger">Hero</span> Shop</h1>
+  </header>
   <main class="main">
     <div class="search-field">
       <div class="search-box">
